<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textStyle="bold"
        android:textSize="22sp"
        android:padding="15dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:text="Testing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:padding="15dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18sp"
                        android:textColor="@color/colorTextPrimary"
                        android:text="@string/book_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/book_name"
                        android:paddingLeft="15dp"
                        android:textSize="18sp"
                        android:textColor="@color/colorTextPrimary"
                        android:text="Book Name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:paddingLeft="15dp"
                        android:textSize="18sp"
                        android:textColor="@color/colorTextPrimary"
                        android:text="@string/writer_s_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/writer_name"
                        android:paddingLeft="15dp"
                        android:textSize="18sp"
                        android:textColor="@color/colorTextPrimary"
                        android:text="U Chit Nyo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <TextView
                    android:paddingTop="15dp"
                    android:paddingLeft="15dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/writer_s_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/history"
                    android:padding="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextSecondary"
                    android:text="@string/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:paddingLeft="15dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/produce_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/produce"
                    android:padding="15dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorTextSecondary"
                    android:text="@string/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="60dp"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        <Button
            android:id="@+id/complete"
            android:textAllCaps="false"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="Complete"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>