<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolBarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginStart="15dp"
            app:expandedTitleMarginBottom="20dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
            <ImageView
                android:id="@+id/book_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_gravity="bottom"
                android:background="@color/colorTransparent"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:visibility="gone"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:padding="15dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/book_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/book_type"
                    android:paddingTop="15dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorTextPrimary"
                    android:text="type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:paddingTop="15dp"
                    android:paddingLeft="15dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorTextPrimary"
                    android:text="@string/writer_s_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/writer_name"
                    android:paddingLeft="15dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorTextPrimary"
                    android:text="U Chit Nyo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:paddingTop="15dp"
                android:paddingLeft="15dp"
                android:textSize="18sp"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/writer_s_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/history"
                android:padding="15dp"
                android:textSize="16sp"
                android:textColor="@color/colorTextSecondary"
                android:text="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:paddingLeft="15dp"
                android:textSize="18sp"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/produce_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/produce"
                android:padding="15dp"
                android:textSize="16sp"
                android:textColor="@color/colorTextSecondary"
                android:text="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:padding="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnView"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="Read"
                    android:textColor="#ffffff"
                    android:textSize="18sp"/>
                <View
                    android:layout_width="15dp"
                    android:layout_height="15dp"/>
                <Button
                    android:layout_weight="1"
                    android:id="@+id/btnDownload"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="DOWNLOAD"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </LinearLayout>
            <TextView
                android:textColor="@color/colorTextPrimary"
                android:textSize="20sp"
                android:padding="15dp"
                android:text="@string/other_books"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:background="@color/colorAccent"
        android:src="@drawable/favorite"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom|end|right"
        app:maxImageSize="28dp"
        android:layout_marginRight="25dp" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorite_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:background="@color/colorAccent"
        android:src="@drawable/favorite_border"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom|end|right"
        app:maxImageSize="28dp"
        android:layout_marginRight="25dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>